Preview text overflow fix

--- a/pwa-dev/css/style.css
+++ b/pwa-dev/css/style.css
@@ -4790,9 +4790,9 @@ textarea {
   padding: 8px 8px 8px 12px;
   margin: 2px;
   font-size: calc(12px + 0.4vw);
-  white-space: nowrap;
+  /* white-space: nowrap; */
   text-align: left;
-  max-width: 47vw;
+  /* max-width: calc(var(--width)/2.1); */
   overflow: overlay;
   line-height: 1.9em;
 }
